--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
-    <div id="root">
-        <h1>Hemalatha is here!</h1>
+    <div id="root" class="root" tabindex="1">
+        <h1>Not Rendered</h1>
     </div>
-<script type = "module" src="./App.js"></script>
    
+<script type="module" src="./App.js"></script>
+
 </body>
 
 </html>
