--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +15,7 @@
         <h1>Not Rendered</h1>
     </div>
    
-<script type="module" src="./App.js"></script>
+<script type="module" src="./src/App.js"></script>
 
 </body>
 
